5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1791_3136.log
== TEST (2019-05-29 14:16:47) 
-- CODE:
from numpy import*

v1 = float(input("Insira numeros reais positivos: "))

n = 1

M = exp(log(v[0]+1) + log(v[1]+1) + log(v[2]+1) + log(v[n-1]+1) /n

print(round(M, 2))
-- ERROR:
File "XXXX", line 9
    print(round(M, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:14) 
-- CODE:
from numpy import*

v1 = float(input("Insira numeros reais positivos: "))

n = 1

m = exp(log(v[0]+1) + log(v[1]+1) + log(v[2]+1) + log(v[n-1]+1) /n

print(round(m, 2))
-- ERROR:
File "XXXX", line 9
    print(round(m, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:46) 
-- CODE:
from numpy import*

v1 = float(input("Insira numeros reais positivos: "))

n = 1

m = exp(log(v[0]+1) + log(v[1]+1) + log(v[2]+1) + log(v[n-1]+1) /n
print(round(m, 2))
-- ERROR:
File "XXXX", line 8
    print(round(m, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:44:57) 
-- CODE:
from numpy import*

v1 = float(input("Insira numeros reais positivos: "))

n = 1

m = exp(log(v[0]+1) + log(v[1]+1) + log(v[2]+1) + log(v[n-1]+1)) /n
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:53:12) 
-- CODE:
from numpy import*

v1 = float(input("Insira numeros reais positivos: "))

i = 0
m = 0

while(i < size(v1))

M = exp(log(v[0]+1) + log(v[1]+1) + log(v[2]+1) + log(v[n-1]+1)) /n
print(round(m, 2))
-- ERROR:
File "XXXX", line 8
    while(i < size(v1))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:01) 
-- CODE:
from numpy import*

v1 = float(input("Insira numeros reais positivos: "))

i = 0
n = 0
while(i<size(v1)):
	M = exp(log(v[0]+1) + log(v[1]+1) + log(v[2]+1) + log(v[n-1]+1)) /n
	i = i + 1

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:55) 
-- CODE:
from numpy import*

v1 = array(eval(input("Insira numeros reais positivos: ")))

i = 0
n = 0
while(i<size(v1)):
	M = exp(log(v[0]+1) + log(v[1]+1) + log(v[2]+1) + log(v[n-1]+1)) /n
	i = i + 1

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
